// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._117z7xi11,html._117z7xi11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="i19zss0 q2yosj10 q2yosj13">
+        <div class="_1py01160 _117z7xi8s _117z7xi7o _117z7xib0 _117z7xi9w _117z7xi5g _117z7xi6c _117z7xiic _117z7xi4k _117z7xi4d q2yosj10 q2yosj13 _117z7xi34 _117z7xi37">
+          <span class="_1py01160 _117z7xi50 q2yosj0 q2yosj1 q2yosj1t q2yosja _1obeqj44">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1py01160 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
._1py01161 {
  display: block;
}
._1py01162 {
  line-height: 1;
}
._1py01163 {
  list-style: none;
}
._1py01164 {
  quotes: none;
}
._1py01164:after,
._1py01164:before {
  content: "";
}
._1py01165 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1py01166 {
  -webkit-appearance: none;
  appearance: none;
}
._1py01167 {
  background-color: transparent;
}
._1py01168 {
  outline: var(--_1ixmwn010) solid transparent;
  transition: outline-color 0.125s ease;
}
._1py01168:focus-visible {
  outline-color: var(--_1ixmwn0m);
}
._1py0116a {
  color: inherit;
}
._1py0116b:disabled {
  opacity: 1;
}
._1py0116b::-ms-expand {
  display: none;
}
._1py0116d[type="number"] {
  -moz-appearance: textfield;
}
._1py0116d[type="number"]::-webkit-inner-spin-button,
._1py0116d[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1py0116d::-ms-clear {
  display: none;
}
._1py0116d::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1py0116g {
  color: inherit;
  text-decoration: none;
}
._117z7xi0 {
  overflow: hidden;
}
._117z7xi1 {
  overflow: scroll;
}
._117z7xi2 {
  overflow: visible;
}
._117z7xi3 {
  overflow: auto;
}
._117z7xi4 {
  -webkit-user-select: none;
  user-select: none;
}
._117z7xi5 {
  outline: none;
}
._117z7xi6 {
  outline: var(--_1ixmwn010) solid transparent;
  transition: outline-color 0.125s ease;
}
._117z7xi6:focus-visible {
  outline-color: var(--_1ixmwn0m);
}
._117z7xi7 {
  opacity: 0;
}
._117z7xi8 {
  z-index: 0;
}
._117z7xi9 {
  z-index: 1;
}
._117z7xia {
  z-index: 2;
}
._117z7xib {
  z-index: 90;
}
._117z7xic {
  z-index: 100;
}
._117z7xid {
  z-index: 200;
}
._117z7xie {
  z-index: 290;
}
._117z7xif {
  z-index: 300;
}
._117z7xig {
  z-index: 400;
}
._117z7xih {
  cursor: default;
}
._117z7xii {
  cursor: pointer;
}
._117z7xij {
  pointer-events: none;
}
._117z7xik {
  top: 0;
}
._117z7xil {
  bottom: 0;
}
._117z7xim {
  left: 0;
}
._117z7xin {
  right: 0;
}
._117z7xio {
  height: 100%;
}
._117z7xip {
  height: var(--_1ixmwn09);
}
._117z7xiq {
  width: 100%;
}
._117z7xir {
  width: var(--_1ixmwn09);
}
._117z7xis {
  min-width: 0;
}
._117z7xit {
  max-width: var(--_1ixmwn011);
}
._117z7xiu {
  max-width: var(--_1ixmwn012);
}
._117z7xiv {
  max-width: var(--_1ixmwn013);
}
._117z7xiw {
  max-width: var(--_1ixmwn014);
}
._117z7xix {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._117z7xiy {
  transition: var(--_1ixmwn05i);
}
._117z7xiz {
  transition: var(--_1ixmwn05j);
}
._117z7xi10:active {
  transform: var(--_1ixmwn05k);
}
html._117z7xi11 ._117z7xi13,
html:not(._117z7xi11) ._117z7xi12 {
  background: var(--_1ixmwn01t);
}
html._117z7xi11 ._117z7xi15,
html:not(._117z7xi11) ._117z7xi14 {
  background: var(--_1ixmwn01u);
}
html._117z7xi11 ._117z7xi17,
html:not(._117z7xi11) ._117z7xi16 {
  background: var(--_1ixmwn01v);
}
html._117z7xi11 ._117z7xi19,
html:not(._117z7xi11) ._117z7xi18 {
  background: var(--_1ixmwn01w);
}
html._117z7xi11 ._117z7xi1b,
html:not(._117z7xi11) ._117z7xi1a {
  background: var(--_1ixmwn01x);
}
html._117z7xi11 ._117z7xi1d,
html:not(._117z7xi11) ._117z7xi1c {
  background: var(--_1ixmwn01y);
}
html._117z7xi11 ._117z7xi1f,
html:not(._117z7xi11) ._117z7xi1e {
  background: var(--_1ixmwn01z);
}
html._117z7xi11 ._117z7xi1h,
html:not(._117z7xi11) ._117z7xi1g {
  background: var(--_1ixmwn020);
}
html._117z7xi11 ._117z7xi1j,
html:not(._117z7xi11) ._117z7xi1i {
  background: var(--_1ixmwn021);
}
html._117z7xi11 ._117z7xi1l,
html:not(._117z7xi11) ._117z7xi1k {
  background: var(--_1ixmwn022);
}
html._117z7xi11 ._117z7xi1n,
html:not(._117z7xi11) ._117z7xi1m {
  background: var(--_1ixmwn023);
}
html._117z7xi11 ._117z7xi1p,
html:not(._117z7xi11) ._117z7xi1o {
  background: var(--_1ixmwn024);
}
html._117z7xi11 ._117z7xi1r,
html:not(._117z7xi11) ._117z7xi1q {
  background: var(--_1ixmwn025);
}
html._117z7xi11 ._117z7xi1t,
html:not(._117z7xi11) ._117z7xi1s {
  background: var(--_1ixmwn026);
}
html._117z7xi11 ._117z7xi1v,
html:not(._117z7xi11) ._117z7xi1u {
  background: var(--_1ixmwn027);
}
html._117z7xi11 ._117z7xi1x,
html:not(._117z7xi11) ._117z7xi1w {
  background: var(--_1ixmwn028);
}
html._117z7xi11 ._117z7xi1z,
html:not(._117z7xi11) ._117z7xi1y {
  background: var(--_1ixmwn029);
}
html._117z7xi11 ._117z7xi21,
html:not(._117z7xi11) ._117z7xi20 {
  background: var(--_1ixmwn02a);
}
html._117z7xi11 ._117z7xi23,
html:not(._117z7xi11) ._117z7xi22 {
  background: var(--_1ixmwn02b);
}
html._117z7xi11 ._117z7xi25,
html:not(._117z7xi11) ._117z7xi24 {
  background: var(--_1ixmwn02c);
}
html._117z7xi11 ._117z7xi27,
html:not(._117z7xi11) ._117z7xi26 {
  background: var(--_1ixmwn02d);
}
html._117z7xi11 ._117z7xi29,
html:not(._117z7xi11) ._117z7xi28 {
  background: var(--_1ixmwn02e);
}
html._117z7xi11 ._117z7xi2b,
html:not(._117z7xi11) ._117z7xi2a {
  background: var(--_1ixmwn02f);
}
html._117z7xi11 ._117z7xi2d,
html:not(._117z7xi11) ._117z7xi2c {
  background: var(--_1ixmwn02g);
}
html._117z7xi11 ._117z7xi2f,
html:not(._117z7xi11) ._117z7xi2e {
  background: var(--_1ixmwn02h);
}
html._117z7xi11 ._117z7xi2h,
html:not(._117z7xi11) ._117z7xi2g {
  background: var(--_1ixmwn02i);
}
html._117z7xi11 ._117z7xi2j,
html:not(._117z7xi11) ._117z7xi2i {
  background: var(--_1ixmwn02j);
}
html._117z7xi11 ._117z7xi2l,
html:not(._117z7xi11) ._117z7xi2k {
  background: var(--_1ixmwn02k);
}
html._117z7xi11 ._117z7xi2n,
html:not(._117z7xi11) ._117z7xi2m {
  background: var(--_1ixmwn02l);
}
html._117z7xi11 ._117z7xi2p,
html:not(._117z7xi11) ._117z7xi2o {
  background: var(--_1ixmwn02m);
}
html._117z7xi11 ._117z7xi2r,
html:not(._117z7xi11) ._117z7xi2q {
  background: var(--_1ixmwn02n);
}
html._117z7xi11 ._117z7xi2t,
html:not(._117z7xi11) ._117z7xi2s {
  background: var(--_1ixmwn02o);
}
html._117z7xi11 ._117z7xi2v,
html:not(._117z7xi11) ._117z7xi2u {
  background: var(--_1ixmwn02p);
}
html._117z7xi11 ._117z7xi2x,
html:not(._117z7xi11) ._117z7xi2w {
  background: var(--_1ixmwn02q);
}
html._117z7xi11 ._117z7xi2z,
html:not(._117z7xi11) ._117z7xi2y {
  background: var(--_1ixmwn02r);
}
html._117z7xi11 ._117z7xi31,
html:not(._117z7xi11) ._117z7xi30 {
  background: var(--_1ixmwn02s);
}
html._117z7xi11 ._117z7xi33,
html:not(._117z7xi11) ._117z7xi32 {
  background: var(--_1ixmwn02t);
}
html._117z7xi11 ._117z7xi35,
html:not(._117z7xi11) ._117z7xi34 {
  background: var(--_1ixmwn02u);
}
html._117z7xi11 ._117z7xi37,
html:not(._117z7xi11) ._117z7xi36 {
  background: var(--_1ixmwn02v);
}
html._117z7xi11 ._117z7xi39,
html:not(._117z7xi11) ._117z7xi38 {
  box-shadow: var(--_1ixmwn05l);
}
html._117z7xi11 ._117z7xi3b,
html:not(._117z7xi11) ._117z7xi3a {
  box-shadow: var(--_1ixmwn05m);
}
html._117z7xi11 ._117z7xi3d,
html:not(._117z7xi11) ._117z7xi3c {
  box-shadow: var(--_1ixmwn05n);
}
html._117z7xi11 ._117z7xi3f,
html:not(._117z7xi11) ._117z7xi3e {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0f);
}
html._117z7xi11 ._117z7xi3h,
html:not(._117z7xi11) ._117z7xi3g {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0g);
}
html._117z7xi11 ._117z7xi3j,
html:not(._117z7xi11) ._117z7xi3i {
  box-shadow: inset 0 0 0 var(--_1ixmwn0z) var(--_1ixmwn0f);
}
html._117z7xi11 ._117z7xi3l,
html:not(._117z7xi11) ._117z7xi3k {
  box-shadow: inset 0 0 0 var(--_1ixmwn0z) var(--_1ixmwn0g);
}
html._117z7xi11 ._117z7xi3n,
html:not(._117z7xi11) ._117z7xi3m {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0h);
}
html._117z7xi11 ._117z7xi3p,
html:not(._117z7xi11) ._117z7xi3o {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0i);
}
html._117z7xi11 ._117z7xi3r,
html:not(._117z7xi11) ._117z7xi3q {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0j);
}
html._117z7xi11 ._117z7xi3t,
html:not(._117z7xi11) ._117z7xi3s {
  box-shadow: inset 0 0 0 var(--_1ixmwn0z) var(--_1ixmwn0j);
}
html._117z7xi11 ._117z7xi3v,
html:not(._117z7xi11) ._117z7xi3u {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0k);
}
html._117z7xi11 ._117z7xi3x,
html:not(._117z7xi11) ._117z7xi3w {
  box-shadow: inset 0 0 0 var(--_1ixmwn0z) var(--_1ixmwn0k);
}
html._117z7xi11 ._117z7xi3z,
html:not(._117z7xi11) ._117z7xi3y {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0l);
}
html._117z7xi11 ._117z7xi41,
html:not(._117z7xi11) ._117z7xi40 {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0n);
}
html._117z7xi11 ._117z7xi43,
html:not(._117z7xi11) ._117z7xi42 {
  box-shadow: inset 0 0 0 var(--_1ixmwn0z) var(--_1ixmwn0n);
}
html._117z7xi11 ._117z7xi45,
html:not(._117z7xi11) ._117z7xi44 {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0o);
}
html._117z7xi11 ._117z7xi47,
html:not(._117z7xi11) ._117z7xi46 {
  box-shadow: inset 0 0 0 var(--_1ixmwn0z) var(--_1ixmwn0o);
}
html._117z7xi11 ._117z7xi49,
html:not(._117z7xi11) ._117z7xi48 {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0p);
}
html._117z7xi11 ._117z7xi4b,
html:not(._117z7xi11) ._117z7xi4a {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0q);
}
html._117z7xi11 ._117z7xi4d,
html:not(._117z7xi11) ._117z7xi4c {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0r);
}
html._117z7xi11 ._117z7xi4f,
html:not(._117z7xi11) ._117z7xi4e {
  box-shadow: inset 0 0 0 var(--_1ixmwn0z) var(--_1ixmwn0r);
}
html._117z7xi11 ._117z7xi4h,
html:not(._117z7xi11) ._117z7xi4g {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0s);
}
html._117z7xi11 ._117z7xi4j,
html:not(._117z7xi11) ._117z7xi4i {
  box-shadow: inset 0 0 0 var(--_1ixmwn0z) var(--_1ixmwn0s);
}
html._117z7xi11 ._117z7xi4l,
html:not(._117z7xi11) ._117z7xi4k {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0t);
}
html._117z7xi11 ._117z7xi4n,
html:not(._117z7xi11) ._117z7xi4m {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0u);
}
html._117z7xi11 ._117z7xi4p,
html:not(._117z7xi11) ._117z7xi4o {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0v);
}
html._117z7xi11 ._117z7xi4r,
html:not(._117z7xi11) ._117z7xi4q {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0w);
}
html._117z7xi11 ._117z7xi4t,
html:not(._117z7xi11) ._117z7xi4s {
  box-shadow: inset 0 0 0 var(--_1ixmwn0y) var(--_1ixmwn0x);
}
html._117z7xi11 ._117z7xi4v,
html:not(._117z7xi11) ._117z7xi4u {
  box-shadow: 0 0 0 var(--_1ixmwn010) var(--_1ixmwn0m);
}
._117z7xi4w {
  display: none;
}
._117z7xi50 {
  display: block;
}
._117z7xi54 {
  display: inline;
}
._117z7xi58 {
  display: inline-block;
}
._117z7xi5c {
  display: flex;
}
._117z7xi5g {
  position: relative;
}
._117z7xi5k {
  position: absolute;
}
._117z7xi5o {
  position: fixed;
}
._117z7xi5s {
  position: sticky;
}
._117z7xi5w {
  border-radius: 0;
}
._117z7xi60 {
  border-radius: 9999px;
}
._117z7xi64 {
  border-radius: var(--_1ixmwn0b);
}
._117z7xi68 {
  border-radius: var(--_1ixmwn0c);
}
._117z7xi6c {
  border-radius: var(--_1ixmwn0d);
}
._117z7xi6g {
  border-radius: var(--_1ixmwn0e);
}
._117z7xi6k {
  gap: var(--_1ixmwn00);
}
._117z7xi6o {
  gap: var(--_1ixmwn01);
}
._117z7xi6s {
  gap: var(--_1ixmwn02);
}
._117z7xi6w {
  gap: var(--_1ixmwn03);
}
._117z7xi70 {
  gap: var(--_1ixmwn04);
}
._117z7xi74 {
  gap: var(--_1ixmwn05);
}
._117z7xi78 {
  gap: var(--_1ixmwn06);
}
._117z7xi7c {
  gap: var(--_1ixmwn07);
}
._117z7xi7g {
  gap: var(--_1ixmwn08);
}
._117z7xi7k {
  gap: 0;
}
._117z7xi7o {
  padding-top: var(--_1ixmwn00);
}
._117z7xi7s {
  padding-top: var(--_1ixmwn01);
}
._117z7xi7w {
  padding-top: var(--_1ixmwn02);
}
._117z7xi80 {
  padding-top: var(--_1ixmwn03);
}
._117z7xi84 {
  padding-top: var(--_1ixmwn04);
}
._117z7xi88 {
  padding-top: var(--_1ixmwn05);
}
._117z7xi8c {
  padding-top: var(--_1ixmwn06);
}
._117z7xi8g {
  padding-top: var(--_1ixmwn07);
}
._117z7xi8k {
  padding-top: var(--_1ixmwn08);
}
._117z7xi8o {
  padding-top: 0;
}
._117z7xi8s {
  padding-bottom: var(--_1ixmwn00);
}
._117z7xi8w {
  padding-bottom: var(--_1ixmwn01);
}
._117z7xi90 {
  padding-bottom: var(--_1ixmwn02);
}
._117z7xi94 {
  padding-bottom: var(--_1ixmwn03);
}
._117z7xi98 {
  padding-bottom: var(--_1ixmwn04);
}
._117z7xi9c {
  padding-bottom: var(--_1ixmwn05);
}
._117z7xi9g {
  padding-bottom: var(--_1ixmwn06);
}
._117z7xi9k {
  padding-bottom: var(--_1ixmwn07);
}
._117z7xi9o {
  padding-bottom: var(--_1ixmwn08);
}
._117z7xi9s {
  padding-bottom: 0;
}
._117z7xi9w {
  padding-right: var(--_1ixmwn00);
}
._117z7xia0 {
  padding-right: var(--_1ixmwn01);
}
._117z7xia4 {
  padding-right: var(--_1ixmwn02);
}
._117z7xia8 {
  padding-right: var(--_1ixmwn03);
}
._117z7xiac {
  padding-right: var(--_1ixmwn04);
}
._117z7xiag {
  padding-right: var(--_1ixmwn05);
}
._117z7xiak {
  padding-right: var(--_1ixmwn06);
}
._117z7xiao {
  padding-right: var(--_1ixmwn07);
}
._117z7xias {
  padding-right: var(--_1ixmwn08);
}
._117z7xiaw {
  padding-right: 0;
}
._117z7xib0 {
  padding-left: var(--_1ixmwn00);
}
._117z7xib4 {
  padding-left: var(--_1ixmwn01);
}
._117z7xib8 {
  padding-left: var(--_1ixmwn02);
}
._117z7xibc {
  padding-left: var(--_1ixmwn03);
}
._117z7xibg {
  padding-left: var(--_1ixmwn04);
}
._117z7xibk {
  padding-left: var(--_1ixmwn05);
}
._117z7xibo {
  padding-left: var(--_1ixmwn06);
}
._117z7xibs {
  padding-left: var(--_1ixmwn07);
}
._117z7xibw {
  padding-left: var(--_1ixmwn08);
}
._117z7xic0 {
  padding-left: 0;
}
._117z7xic4 {
  margin-top: var(--_1ixmwn00);
}
._117z7xic8 {
  margin-top: var(--_1ixmwn01);
}
._117z7xicc {
  margin-top: var(--_1ixmwn02);
}
._117z7xicg {
  margin-top: var(--_1ixmwn03);
}
._117z7xick {
  margin-top: var(--_1ixmwn04);
}
._117z7xico {
  margin-top: var(--_1ixmwn05);
}
._117z7xics {
  margin-top: var(--_1ixmwn06);
}
._117z7xicw {
  margin-top: var(--_1ixmwn07);
}
._117z7xid0 {
  margin-top: var(--_1ixmwn08);
}
._117z7xid4 {
  margin-top: 0;
}
._117z7xid8 {
  margin-bottom: var(--_1ixmwn00);
}
._117z7xidc {
  margin-bottom: var(--_1ixmwn01);
}
._117z7xidg {
  margin-bottom: var(--_1ixmwn02);
}
._117z7xidk {
  margin-bottom: var(--_1ixmwn03);
}
._117z7xido {
  margin-bottom: var(--_1ixmwn04);
}
._117z7xids {
  margin-bottom: var(--_1ixmwn05);
}
._117z7xidw {
  margin-bottom: var(--_1ixmwn06);
}
._117z7xie0 {
  margin-bottom: var(--_1ixmwn07);
}
._117z7xie4 {
  margin-bottom: var(--_1ixmwn08);
}
._117z7xie8 {
  margin-bottom: 0;
}
._117z7xiec {
  margin-right: var(--_1ixmwn00);
}
._117z7xieg {
  margin-right: var(--_1ixmwn01);
}
._117z7xiek {
  margin-right: var(--_1ixmwn02);
}
._117z7xieo {
  margin-right: var(--_1ixmwn03);
}
._117z7xies {
  margin-right: var(--_1ixmwn04);
}
._117z7xiew {
  margin-right: var(--_1ixmwn05);
}
._117z7xif0 {
  margin-right: var(--_1ixmwn06);
}
._117z7xif4 {
  margin-right: var(--_1ixmwn07);
}
._117z7xif8 {
  margin-right: var(--_1ixmwn08);
}
._117z7xifc {
  margin-right: 0;
}
._117z7xifg {
  margin-left: var(--_1ixmwn00);
}
._117z7xifk {
  margin-left: var(--_1ixmwn01);
}
._117z7xifo {
  margin-left: var(--_1ixmwn02);
}
._117z7xifs {
  margin-left: var(--_1ixmwn03);
}
._117z7xifw {
  margin-left: var(--_1ixmwn04);
}
._117z7xig0 {
  margin-left: var(--_1ixmwn05);
}
._117z7xig4 {
  margin-left: var(--_1ixmwn06);
}
._117z7xig8 {
  margin-left: var(--_1ixmwn07);
}
._117z7xigc {
  margin-left: var(--_1ixmwn08);
}
._117z7xigg {
  margin-left: 0;
}
._117z7xigk {
  align-items: flex-start;
}
._117z7xigo {
  align-items: center;
}
._117z7xigs {
  align-items: flex-end;
}
._117z7xigw {
  justify-content: flex-start;
}
._117z7xih0 {
  justify-content: center;
}
._117z7xih4 {
  justify-content: flex-end;
}
._117z7xih8 {
  justify-content: space-between;
}
._117z7xihc {
  flex-direction: row;
}
._117z7xihg {
  flex-direction: row-reverse;
}
._117z7xihk {
  flex-direction: column;
}
._117z7xiho {
  flex-direction: column-reverse;
}
._117z7xihs {
  flex-wrap: wrap;
}
._117z7xihw {
  flex-wrap: nowrap;
}
._117z7xii0 {
  flex-shrink: 0;
}
._117z7xii4 {
  flex-grow: 0;
}
._117z7xii8 {
  flex-grow: 1;
}
._117z7xiic {
  text-align: left;
}
._117z7xiig {
  text-align: center;
}
._117z7xiik {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._117z7xi4x {
    display: none;
  }
  ._117z7xi51 {
    display: block;
  }
  ._117z7xi55 {
    display: inline;
  }
  ._117z7xi59 {
    display: inline-block;
  }
  ._117z7xi5d {
    display: flex;
  }
  ._117z7xi5h {
    position: relative;
  }
  ._117z7xi5l {
    position: absolute;
  }
  ._117z7xi5p {
    position: fixed;
  }
  ._117z7xi5t {
    position: sticky;
  }
  ._117z7xi5x {
    border-radius: 0;
  }
  ._117z7xi61 {
    border-radius: 9999px;
  }
  ._117z7xi65 {
    border-radius: var(--_1ixmwn0b);
  }
  ._117z7xi69 {
    border-radius: var(--_1ixmwn0c);
  }
  ._117z7xi6d {
    border-radius: var(--_1ixmwn0d);
  }
  ._117z7xi6h {
    border-radius: var(--_1ixmwn0e);
  }
  ._117z7xi6l {
    gap: var(--_1ixmwn00);
  }
  ._117z7xi6p {
    gap: var(--_1ixmwn01);
  }
  ._117z7xi6t {
    gap: var(--_1ixmwn02);
  }
  ._117z7xi6x {
    gap: var(--_1ixmwn03);
  }
  ._117z7xi71 {
    gap: var(--_1ixmwn04);
  }
  ._117z7xi75 {
    gap: var(--_1ixmwn05);
  }
  ._117z7xi79 {
    gap: var(--_1ixmwn06);
  }
  ._117z7xi7d {
    gap: var(--_1ixmwn07);
  }
  ._117z7xi7h {
    gap: var(--_1ixmwn08);
  }
  ._117z7xi7l {
    gap: 0;
  }
  ._117z7xi7p {
    padding-top: var(--_1ixmwn00);
  }
  ._117z7xi7t {
    padding-top: var(--_1ixmwn01);
  }
  ._117z7xi7x {
    padding-top: var(--_1ixmwn02);
  }
  ._117z7xi81 {
    padding-top: var(--_1ixmwn03);
  }
  ._117z7xi85 {
    padding-top: var(--_1ixmwn04);
  }
  ._117z7xi89 {
    padding-top: var(--_1ixmwn05);
  }
  ._117z7xi8d {
    padding-top: var(--_1ixmwn06);
  }
  ._117z7xi8h {
    padding-top: var(--_1ixmwn07);
  }
  ._117z7xi8l {
    padding-top: var(--_1ixmwn08);
  }
  ._117z7xi8p {
    padding-top: 0;
  }
  ._117z7xi8t {
    padding-bottom: var(--_1ixmwn00);
  }
  ._117z7xi8x {
    padding-bottom: var(--_1ixmwn01);
  }
  ._117z7xi91 {
    padding-bottom: var(--_1ixmwn02);
  }
  ._117z7xi95 {
    padding-bottom: var(--_1ixmwn03);
  }
  ._117z7xi99 {
    padding-bottom: var(--_1ixmwn04);
  }
  ._117z7xi9d {
    padding-bottom: var(--_1ixmwn05);
  }
  ._117z7xi9h {
    padding-bottom: var(--_1ixmwn06);
  }
  ._117z7xi9l {
    padding-bottom: var(--_1ixmwn07);
  }
  ._117z7xi9p {
    padding-bottom: var(--_1ixmwn08);
  }
  ._117z7xi9t {
    padding-bottom: 0;
  }
  ._117z7xi9x {
    padding-right: var(--_1ixmwn00);
  }
  ._117z7xia1 {
    padding-right: var(--_1ixmwn01);
  }
  ._117z7xia5 {
    padding-right: var(--_1ixmwn02);
  }
  ._117z7xia9 {
    padding-right: var(--_1ixmwn03);
  }
  ._117z7xiad {
    padding-right: var(--_1ixmwn04);
  }
  ._117z7xiah {
    padding-right: var(--_1ixmwn05);
  }
  ._117z7xial {
    padding-right: var(--_1ixmwn06);
  }
  ._117z7xiap {
    padding-right: var(--_1ixmwn07);
  }
  ._117z7xiat {
    padding-right: var(--_1ixmwn08);
  }
  ._117z7xiax {
    padding-right: 0;
  }
  ._117z7xib1 {
    padding-left: var(--_1ixmwn00);
  }
  ._117z7xib5 {
    padding-left: var(--_1ixmwn01);
  }
  ._117z7xib9 {
    padding-left: var(--_1ixmwn02);
  }
  ._117z7xibd {
    padding-left: var(--_1ixmwn03);
  }
  ._117z7xibh {
    padding-left: var(--_1ixmwn04);
  }
  ._117z7xibl {
    padding-left: var(--_1ixmwn05);
  }
  ._117z7xibp {
    padding-left: var(--_1ixmwn06);
  }
  ._117z7xibt {
    padding-left: var(--_1ixmwn07);
  }
  ._117z7xibx {
    padding-left: var(--_1ixmwn08);
  }
  ._117z7xic1 {
    padding-left: 0;
  }
  ._117z7xic5 {
    margin-top: var(--_1ixmwn00);
  }
  ._117z7xic9 {
    margin-top: var(--_1ixmwn01);
  }
  ._117z7xicd {
    margin-top: var(--_1ixmwn02);
  }
  ._117z7xich {
    margin-top: var(--_1ixmwn03);
  }
  ._117z7xicl {
    margin-top: var(--_1ixmwn04);
  }
  ._117z7xicp {
    margin-top: var(--_1ixmwn05);
  }
  ._117z7xict {
    margin-top: var(--_1ixmwn06);
  }
  ._117z7xicx {
    margin-top: var(--_1ixmwn07);
  }
  ._117z7xid1 {
    margin-top: var(--_1ixmwn08);
  }
  ._117z7xid5 {
    margin-top: 0;
  }
  ._117z7xid9 {
    margin-bottom: var(--_1ixmwn00);
  }
  ._117z7xidd {
    margin-bottom: var(--_1ixmwn01);
  }
  ._117z7xidh {
    margin-bottom: var(--_1ixmwn02);
  }
  ._117z7xidl {
    margin-bottom: var(--_1ixmwn03);
  }
  ._117z7xidp {
    margin-bottom: var(--_1ixmwn04);
  }
  ._117z7xidt {
    margin-bottom: var(--_1ixmwn05);
  }
  ._117z7xidx {
    margin-bottom: var(--_1ixmwn06);
  }
  ._117z7xie1 {
    margin-bottom: var(--_1ixmwn07);
  }
  ._117z7xie5 {
    margin-bottom: var(--_1ixmwn08);
  }
  ._117z7xie9 {
    margin-bottom: 0;
  }
  ._117z7xied {
    margin-right: var(--_1ixmwn00);
  }
  ._117z7xieh {
    margin-right: var(--_1ixmwn01);
  }
  ._117z7xiel {
    margin-right: var(--_1ixmwn02);
  }
  ._117z7xiep {
    margin-right: var(--_1ixmwn03);
  }
  ._117z7xiet {
    margin-right: var(--_1ixmwn04);
  }
  ._117z7xiex {
    margin-right: var(--_1ixmwn05);
  }
  ._117z7xif1 {
    margin-right: var(--_1ixmwn06);
  }
  ._117z7xif5 {
    margin-right: var(--_1ixmwn07);
  }
  ._117z7xif9 {
    margin-right: var(--_1ixmwn08);
  }
  ._117z7xifd {
    margin-right: 0;
  }
  ._117z7xifh {
    margin-left: var(--_1ixmwn00);
  }
  ._117z7xifl {
    margin-left: var(--_1ixmwn01);
  }
  ._117z7xifp {
    margin-left: var(--_1ixmwn02);
  }
  ._117z7xift {
    margin-left: var(--_1ixmwn03);
  }
  ._117z7xifx {
    margin-left: var(--_1ixmwn04);
  }
  ._117z7xig1 {
    margin-left: var(--_1ixmwn05);
  }
  ._117z7xig5 {
    margin-left: var(--_1ixmwn06);
  }
  ._117z7xig9 {
    margin-left: var(--_1ixmwn07);
  }
  ._117z7xigd {
    margin-left: var(--_1ixmwn08);
  }
  ._117z7xigh {
    margin-left: 0;
  }
  ._117z7xigl {
    align-items: flex-start;
  }
  ._117z7xigp {
    align-items: center;
  }
  ._117z7xigt {
    align-items: flex-end;
  }
  ._117z7xigx {
    justify-content: flex-start;
  }
  ._117z7xih1 {
    justify-content: center;
  }
  ._117z7xih5 {
    justify-content: flex-end;
  }
  ._117z7xih9 {
    justify-content: space-between;
  }
  ._117z7xihd {
    flex-direction: row;
  }
  ._117z7xihh {
    flex-direction: row-reverse;
  }
  ._117z7xihl {
    flex-direction: column;
  }
  ._117z7xihp {
    flex-direction: column-reverse;
  }
  ._117z7xiht {
    flex-wrap: wrap;
  }
  ._117z7xihx {
    flex-wrap: nowrap;
  }
  ._117z7xii1 {
    flex-shrink: 0;
  }
  ._117z7xii5 {
    flex-grow: 0;
  }
  ._117z7xii9 {
    flex-grow: 1;
  }
  ._117z7xiid {
    text-align: left;
  }
  ._117z7xiih {
    text-align: center;
  }
  ._117z7xiil {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._117z7xi4y {
    display: none;
  }
  ._117z7xi52 {
    display: block;
  }
  ._117z7xi56 {
    display: inline;
  }
  ._117z7xi5a {
    display: inline-block;
  }
  ._117z7xi5e {
    display: flex;
  }
  ._117z7xi5i {
    position: relative;
  }
  ._117z7xi5m {
    position: absolute;
  }
  ._117z7xi5q {
    position: fixed;
  }
  ._117z7xi5u {
    position: sticky;
  }
  ._117z7xi5y {
    border-radius: 0;
  }
  ._117z7xi62 {
    border-radius: 9999px;
  }
  ._117z7xi66 {
    border-radius: var(--_1ixmwn0b);
  }
  ._117z7xi6a {
    border-radius: var(--_1ixmwn0c);
  }
  ._117z7xi6e {
    border-radius: var(--_1ixmwn0d);
  }
  ._117z7xi6i {
    border-radius: var(--_1ixmwn0e);
  }
  ._117z7xi6m {
    gap: var(--_1ixmwn00);
  }
  ._117z7xi6q {
    gap: var(--_1ixmwn01);
  }
  ._117z7xi6u {
    gap: var(--_1ixmwn02);
  }
  ._117z7xi6y {
    gap: var(--_1ixmwn03);
  }
  ._117z7xi72 {
    gap: var(--_1ixmwn04);
  }
  ._117z7xi76 {
    gap: var(--_1ixmwn05);
  }
  ._117z7xi7a {
    gap: var(--_1ixmwn06);
  }
  ._117z7xi7e {
    gap: var(--_1ixmwn07);
  }
  ._117z7xi7i {
    gap: var(--_1ixmwn08);
  }
  ._117z7xi7m {
    gap: 0;
  }
  ._117z7xi7q {
    padding-top: var(--_1ixmwn00);
  }
  ._117z7xi7u {
    padding-top: var(--_1ixmwn01);
  }
  ._117z7xi7y {
    padding-top: var(--_1ixmwn02);
  }
  ._117z7xi82 {
    padding-top: var(--_1ixmwn03);
  }
  ._117z7xi86 {
    padding-top: var(--_1ixmwn04);
  }
  ._117z7xi8a {
    padding-top: var(--_1ixmwn05);
  }
  ._117z7xi8e {
    padding-top: var(--_1ixmwn06);
  }
  ._117z7xi8i {
    padding-top: var(--_1ixmwn07);
  }
  ._117z7xi8m {
    padding-top: var(--_1ixmwn08);
  }
  ._117z7xi8q {
    padding-top: 0;
  }
  ._117z7xi8u {
    padding-bottom: var(--_1ixmwn00);
  }
  ._117z7xi8y {
    padding-bottom: var(--_1ixmwn01);
  }
  ._117z7xi92 {
    padding-bottom: var(--_1ixmwn02);
  }
  ._117z7xi96 {
    padding-bottom: var(--_1ixmwn03);
  }
  ._117z7xi9a {
    padding-bottom: var(--_1ixmwn04);
  }
  ._117z7xi9e {
    padding-bottom: var(--_1ixmwn05);
  }
  ._117z7xi9i {
    padding-bottom: var(--_1ixmwn06);
  }
  ._117z7xi9m {
    padding-bottom: var(--_1ixmwn07);
  }
  ._117z7xi9q {
    padding-bottom: var(--_1ixmwn08);
  }
  ._117z7xi9u {
    padding-bottom: 0;
  }
  ._117z7xi9y {
    padding-right: var(--_1ixmwn00);
  }
  ._117z7xia2 {
    padding-right: var(--_1ixmwn01);
  }
  ._117z7xia6 {
    padding-right: var(--_1ixmwn02);
  }
  ._117z7xiaa {
    padding-right: var(--_1ixmwn03);
  }
  ._117z7xiae {
    padding-right: var(--_1ixmwn04);
  }
  ._117z7xiai {
    padding-right: var(--_1ixmwn05);
  }
  ._117z7xiam {
    padding-right: var(--_1ixmwn06);
  }
  ._117z7xiaq {
    padding-right: var(--_1ixmwn07);
  }
  ._117z7xiau {
    padding-right: var(--_1ixmwn08);
  }
  ._117z7xiay {
    padding-right: 0;
  }
  ._117z7xib2 {
    padding-left: var(--_1ixmwn00);
  }
  ._117z7xib6 {
    padding-left: var(--_1ixmwn01);
  }
  ._117z7xiba {
    padding-left: var(--_1ixmwn02);
  }
  ._117z7xibe {
    padding-left: var(--_1ixmwn03);
  }
  ._117z7xibi {
    padding-left: var(--_1ixmwn04);
  }
  ._117z7xibm {
    padding-left: var(--_1ixmwn05);
  }
  ._117z7xibq {
    padding-left: var(--_1ixmwn06);
  }
  ._117z7xibu {
    padding-left: var(--_1ixmwn07);
  }
  ._117z7xiby {
    padding-left: var(--_1ixmwn08);
  }
  ._117z7xic2 {
    padding-left: 0;
  }
  ._117z7xic6 {
    margin-top: var(--_1ixmwn00);
  }
  ._117z7xica {
    margin-top: var(--_1ixmwn01);
  }
  ._117z7xice {
    margin-top: var(--_1ixmwn02);
  }
  ._117z7xici {
    margin-top: var(--_1ixmwn03);
  }
  ._117z7xicm {
    margin-top: var(--_1ixmwn04);
  }
  ._117z7xicq {
    margin-top: var(--_1ixmwn05);
  }
  ._117z7xicu {
    margin-top: var(--_1ixmwn06);
  }
  ._117z7xicy {
    margin-top: var(--_1ixmwn07);
  }
  ._117z7xid2 {
    margin-top: var(--_1ixmwn08);
  }
  ._117z7xid6 {
    margin-top: 0;
  }
  ._117z7xida {
    margin-bottom: var(--_1ixmwn00);
  }
  ._117z7xide {
    margin-bottom: var(--_1ixmwn01);
  }
  ._117z7xidi {
    margin-bottom: var(--_1ixmwn02);
  }
  ._117z7xidm {
    margin-bottom: var(--_1ixmwn03);
  }
  ._117z7xidq {
    margin-bottom: var(--_1ixmwn04);
  }
  ._117z7xidu {
    margin-bottom: var(--_1ixmwn05);
  }
  ._117z7xidy {
    margin-bottom: var(--_1ixmwn06);
  }
  ._117z7xie2 {
    margin-bottom: var(--_1ixmwn07);
  }
  ._117z7xie6 {
    margin-bottom: var(--_1ixmwn08);
  }
  ._117z7xiea {
    margin-bottom: 0;
  }
  ._117z7xiee {
    margin-right: var(--_1ixmwn00);
  }
  ._117z7xiei {
    margin-right: var(--_1ixmwn01);
  }
  ._117z7xiem {
    margin-right: var(--_1ixmwn02);
  }
  ._117z7xieq {
    margin-right: var(--_1ixmwn03);
  }
  ._117z7xieu {
    margin-right: var(--_1ixmwn04);
  }
  ._117z7xiey {
    margin-right: var(--_1ixmwn05);
  }
  ._117z7xif2 {
    margin-right: var(--_1ixmwn06);
  }
  ._117z7xif6 {
    margin-right: var(--_1ixmwn07);
  }
  ._117z7xifa {
    margin-right: var(--_1ixmwn08);
  }
  ._117z7xife {
    margin-right: 0;
  }
  ._117z7xifi {
    margin-left: var(--_1ixmwn00);
  }
  ._117z7xifm {
    margin-left: var(--_1ixmwn01);
  }
  ._117z7xifq {
    margin-left: var(--_1ixmwn02);
  }
  ._117z7xifu {
    margin-left: var(--_1ixmwn03);
  }
  ._117z7xify {
    margin-left: var(--_1ixmwn04);
  }
  ._117z7xig2 {
    margin-left: var(--_1ixmwn05);
  }
  ._117z7xig6 {
    margin-left: var(--_1ixmwn06);
  }
  ._117z7xiga {
    margin-left: var(--_1ixmwn07);
  }
  ._117z7xige {
    margin-left: var(--_1ixmwn08);
  }
  ._117z7xigi {
    margin-left: 0;
  }
  ._117z7xigm {
    align-items: flex-start;
  }
  ._117z7xigq {
    align-items: center;
  }
  ._117z7xigu {
    align-items: flex-end;
  }
  ._117z7xigy {
    justify-content: flex-start;
  }
  ._117z7xih2 {
    justify-content: center;
  }
  ._117z7xih6 {
    justify-content: flex-end;
  }
  ._117z7xiha {
    justify-content: space-between;
  }
  ._117z7xihe {
    flex-direction: row;
  }
  ._117z7xihi {
    flex-direction: row-reverse;
  }
  ._117z7xihm {
    flex-direction: column;
  }
  ._117z7xihq {
    flex-direction: column-reverse;
  }
  ._117z7xihu {
    flex-wrap: wrap;
  }
  ._117z7xihy {
    flex-wrap: nowrap;
  }
  ._117z7xii2 {
    flex-shrink: 0;
  }
  ._117z7xii6 {
    flex-grow: 0;
  }
  ._117z7xiia {
    flex-grow: 1;
  }
  ._117z7xiie {
    text-align: left;
  }
  ._117z7xiii {
    text-align: center;
  }
  ._117z7xiim {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._117z7xi4z {
    display: none;
  }
  ._117z7xi53 {
    display: block;
  }
  ._117z7xi57 {
    display: inline;
  }
  ._117z7xi5b {
    display: inline-block;
  }
  ._117z7xi5f {
    display: flex;
  }
  ._117z7xi5j {
    position: relative;
  }
  ._117z7xi5n {
    position: absolute;
  }
  ._117z7xi5r {
    position: fixed;
  }
  ._117z7xi5v {
    position: sticky;
  }
  ._117z7xi5z {
    border-radius: 0;
  }
  ._117z7xi63 {
    border-radius: 9999px;
  }
  ._117z7xi67 {
    border-radius: var(--_1ixmwn0b);
  }
  ._117z7xi6b {
    border-radius: var(--_1ixmwn0c);
  }
  ._117z7xi6f {
    border-radius: var(--_1ixmwn0d);
  }
  ._117z7xi6j {
    border-radius: var(--_1ixmwn0e);
  }
  ._117z7xi6n {
    gap: var(--_1ixmwn00);
  }
  ._117z7xi6r {
    gap: var(--_1ixmwn01);
  }
  ._117z7xi6v {
    gap: var(--_1ixmwn02);
  }
  ._117z7xi6z {
    gap: var(--_1ixmwn03);
  }
  ._117z7xi73 {
    gap: var(--_1ixmwn04);
  }
  ._117z7xi77 {
    gap: var(--_1ixmwn05);
  }
  ._117z7xi7b {
    gap: var(--_1ixmwn06);
  }
  ._117z7xi7f {
    gap: var(--_1ixmwn07);
  }
  ._117z7xi7j {
    gap: var(--_1ixmwn08);
  }
  ._117z7xi7n {
    gap: 0;
  }
  ._117z7xi7r {
    padding-top: var(--_1ixmwn00);
  }
  ._117z7xi7v {
    padding-top: var(--_1ixmwn01);
  }
  ._117z7xi7z {
    padding-top: var(--_1ixmwn02);
  }
  ._117z7xi83 {
    padding-top: var(--_1ixmwn03);
  }
  ._117z7xi87 {
    padding-top: var(--_1ixmwn04);
  }
  ._117z7xi8b {
    padding-top: var(--_1ixmwn05);
  }
  ._117z7xi8f {
    padding-top: var(--_1ixmwn06);
  }
  ._117z7xi8j {
    padding-top: var(--_1ixmwn07);
  }
  ._117z7xi8n {
    padding-top: var(--_1ixmwn08);
  }
  ._117z7xi8r {
    padding-top: 0;
  }
  ._117z7xi8v {
    padding-bottom: var(--_1ixmwn00);
  }
  ._117z7xi8z {
    padding-bottom: var(--_1ixmwn01);
  }
  ._117z7xi93 {
    padding-bottom: var(--_1ixmwn02);
  }
  ._117z7xi97 {
    padding-bottom: var(--_1ixmwn03);
  }
  ._117z7xi9b {
    padding-bottom: var(--_1ixmwn04);
  }
  ._117z7xi9f {
    padding-bottom: var(--_1ixmwn05);
  }
  ._117z7xi9j {
    padding-bottom: var(--_1ixmwn06);
  }
  ._117z7xi9n {
    padding-bottom: var(--_1ixmwn07);
  }
  ._117z7xi9r {
    padding-bottom: var(--_1ixmwn08);
  }
  ._117z7xi9v {
    padding-bottom: 0;
  }
  ._117z7xi9z {
    padding-right: var(--_1ixmwn00);
  }
  ._117z7xia3 {
    padding-right: var(--_1ixmwn01);
  }
  ._117z7xia7 {
    padding-right: var(--_1ixmwn02);
  }
  ._117z7xiab {
    padding-right: var(--_1ixmwn03);
  }
  ._117z7xiaf {
    padding-right: var(--_1ixmwn04);
  }
  ._117z7xiaj {
    padding-right: var(--_1ixmwn05);
  }
  ._117z7xian {
    padding-right: var(--_1ixmwn06);
  }
  ._117z7xiar {
    padding-right: var(--_1ixmwn07);
  }
  ._117z7xiav {
    padding-right: var(--_1ixmwn08);
  }
  ._117z7xiaz {
    padding-right: 0;
  }
  ._117z7xib3 {
    padding-left: var(--_1ixmwn00);
  }
  ._117z7xib7 {
    padding-left: var(--_1ixmwn01);
  }
  ._117z7xibb {
    padding-left: var(--_1ixmwn02);
  }
  ._117z7xibf {
    padding-left: var(--_1ixmwn03);
  }
  ._117z7xibj {
    padding-left: var(--_1ixmwn04);
  }
  ._117z7xibn {
    padding-left: var(--_1ixmwn05);
  }
  ._117z7xibr {
    padding-left: var(--_1ixmwn06);
  }
  ._117z7xibv {
    padding-left: var(--_1ixmwn07);
  }
  ._117z7xibz {
    padding-left: var(--_1ixmwn08);
  }
  ._117z7xic3 {
    padding-left: 0;
  }
  ._117z7xic7 {
    margin-top: var(--_1ixmwn00);
  }
  ._117z7xicb {
    margin-top: var(--_1ixmwn01);
  }
  ._117z7xicf {
    margin-top: var(--_1ixmwn02);
  }
  ._117z7xicj {
    margin-top: var(--_1ixmwn03);
  }
  ._117z7xicn {
    margin-top: var(--_1ixmwn04);
  }
  ._117z7xicr {
    margin-top: var(--_1ixmwn05);
  }
  ._117z7xicv {
    margin-top: var(--_1ixmwn06);
  }
  ._117z7xicz {
    margin-top: var(--_1ixmwn07);
  }
  ._117z7xid3 {
    margin-top: var(--_1ixmwn08);
  }
  ._117z7xid7 {
    margin-top: 0;
  }
  ._117z7xidb {
    margin-bottom: var(--_1ixmwn00);
  }
  ._117z7xidf {
    margin-bottom: var(--_1ixmwn01);
  }
  ._117z7xidj {
    margin-bottom: var(--_1ixmwn02);
  }
  ._117z7xidn {
    margin-bottom: var(--_1ixmwn03);
  }
  ._117z7xidr {
    margin-bottom: var(--_1ixmwn04);
  }
  ._117z7xidv {
    margin-bottom: var(--_1ixmwn05);
  }
  ._117z7xidz {
    margin-bottom: var(--_1ixmwn06);
  }
  ._117z7xie3 {
    margin-bottom: var(--_1ixmwn07);
  }
  ._117z7xie7 {
    margin-bottom: var(--_1ixmwn08);
  }
  ._117z7xieb {
    margin-bottom: 0;
  }
  ._117z7xief {
    margin-right: var(--_1ixmwn00);
  }
  ._117z7xiej {
    margin-right: var(--_1ixmwn01);
  }
  ._117z7xien {
    margin-right: var(--_1ixmwn02);
  }
  ._117z7xier {
    margin-right: var(--_1ixmwn03);
  }
  ._117z7xiev {
    margin-right: var(--_1ixmwn04);
  }
  ._117z7xiez {
    margin-right: var(--_1ixmwn05);
  }
  ._117z7xif3 {
    margin-right: var(--_1ixmwn06);
  }
  ._117z7xif7 {
    margin-right: var(--_1ixmwn07);
  }
  ._117z7xifb {
    margin-right: var(--_1ixmwn08);
  }
  ._117z7xiff {
    margin-right: 0;
  }
  ._117z7xifj {
    margin-left: var(--_1ixmwn00);
  }
  ._117z7xifn {
    margin-left: var(--_1ixmwn01);
  }
  ._117z7xifr {
    margin-left: var(--_1ixmwn02);
  }
  ._117z7xifv {
    margin-left: var(--_1ixmwn03);
  }
  ._117z7xifz {
    margin-left: var(--_1ixmwn04);
  }
  ._117z7xig3 {
    margin-left: var(--_1ixmwn05);
  }
  ._117z7xig7 {
    margin-left: var(--_1ixmwn06);
  }
  ._117z7xigb {
    margin-left: var(--_1ixmwn07);
  }
  ._117z7xigf {
    margin-left: var(--_1ixmwn08);
  }
  ._117z7xigj {
    margin-left: 0;
  }
  ._117z7xign {
    align-items: flex-start;
  }
  ._117z7xigr {
    align-items: center;
  }
  ._117z7xigv {
    align-items: flex-end;
  }
  ._117z7xigz {
    justify-content: flex-start;
  }
  ._117z7xih3 {
    justify-content: center;
  }
  ._117z7xih7 {
    justify-content: flex-end;
  }
  ._117z7xihb {
    justify-content: space-between;
  }
  ._117z7xihf {
    flex-direction: row;
  }
  ._117z7xihj {
    flex-direction: row-reverse;
  }
  ._117z7xihn {
    flex-direction: column;
  }
  ._117z7xihr {
    flex-direction: column-reverse;
  }
  ._117z7xihv {
    flex-wrap: wrap;
  }
  ._117z7xihz {
    flex-wrap: nowrap;
  }
  ._117z7xii3 {
    flex-shrink: 0;
  }
  ._117z7xii7 {
    flex-grow: 0;
  }
  ._117z7xiib {
    flex-grow: 1;
  }
  ._117z7xiif {
    text-align: left;
  }
  ._117z7xiij {
    text-align: center;
  }
  ._117z7xiin {
    text-align: right;
  }
}
.i19zss0 {
  --_1ixmwn00: 24px;
  --_1ixmwn01: 8px;
  --_1ixmwn02: 12px;
  --_1ixmwn03: 16px;
  --_1ixmwn04: 24px;
  --_1ixmwn05: 32px;
  --_1ixmwn06: 48px;
  --_1ixmwn07: 64px;
  --_1ixmwn08: 96px;
  --_1ixmwn09: 48px;
  --_1ixmwn0a: 4px;
  --_1ixmwn0b: 4px;
  --_1ixmwn0c: 8px;
  --_1ixmwn0d: 16px;
  --_1ixmwn0e: 24px;
  --_1ixmwn0f: #e60278;
  --_1ixmwn0g: #f8b1dc;
  --_1ixmwn0h: #fdc221;
  --_1ixmwn0i: #fee384;
  --_1ixmwn0j: #b91e1e;
  --_1ixmwn0k: #fb999a;
  --_1ixmwn0l: #838fa5;
  --_1ixmwn0m: rgba(153, 191, 247, 0.7);
  --_1ixmwn0n: #1e47a9;
  --_1ixmwn0o: #99bff7;
  --_1ixmwn0p: #1d559d;
  --_1ixmwn0q: #98c9f1;
  --_1ixmwn0r: #2e3849;
  --_1ixmwn0t: #eaecf1;
  --_1ixmwn0s: #fff;
  --_1ixmwn0u: #12784f;
  --_1ixmwn0v: #8bdec5;
  --_1ixmwn0w: #7f35a9;
  --_1ixmwn0x: #e1b2f5;
  --_1ixmwn0y: 2px;
  --_1ixmwn0z: 4px;
  --_1ixmwn010: 6px;
  --_1ixmwn011: 400px;
  --_1ixmwn012: 660px;
  --_1ixmwn013: 940px;
  --_1ixmwn014: 1280px;
  --_1ixmwn015: #e60278;
  --_1ixmwn016: #f8b1dc;
  --_1ixmwn017: #723d02;
  --_1ixmwn018: #fee384;
  --_1ixmwn019: #b91e1e;
  --_1ixmwn01a: #fb999a;
  --_1ixmwn01b: #1e47a9;
  --_1ixmwn01c: #99bff7;
  --_1ixmwn01d: #1d559d;
  --_1ixmwn01e: #98c9f1;
  --_1ixmwn01f: #2e3849;
  --_1ixmwn01h: #fff;
  --_1ixmwn01g: #2e3849;
  --_1ixmwn01i: #5b2084;
  --_1ixmwn01j: #f0d6fa;
  --_1ixmwn01k: #2e3849;
  --_1ixmwn01l: #fff;
  --_1ixmwn01m: #12784f;
  --_1ixmwn01n: #8bdec5;
  --_1ixmwn01o: #7f35a9;
  --_1ixmwn01p: #e1b2f5;
  --_1ixmwn01q: #e60278;
  --_1ixmwn01r: #5a6881;
  --_1ixmwn01s: hsla(0, 0%, 100%, 0.65);
  --_1ixmwn01t: #fff;
  --_1ixmwn01u: #1c2330;
  --_1ixmwn01v: #051a49;
  --_1ixmwn01w: #e60278;
  --_1ixmwn01x: #cd026b;
  --_1ixmwn01y: #fd0585;
  --_1ixmwn01z: #feeffa;
  --_1ixmwn020: #fdd7f3;
  --_1ixmwn021: #fde3f6;
  --_1ixmwn022: #fdc221;
  --_1ixmwn023: #fef8de;
  --_1ixmwn024: #b91e1e;
  --_1ixmwn025: #a31a1a;
  --_1ixmwn026: #db1616;
  --_1ixmwn027: #ffe3e2;
  --_1ixmwn028: #fef3f3;
  --_1ixmwn029: #fcdbdb;
  --_1ixmwn02a: #fde7e7;
  --_1ixmwn02b: #1e47a9;
  --_1ixmwn02c: #1a3e93;
  --_1ixmwn02d: #2455c9;
  --_1ixmwn02e: #f0f7fe;
  --_1ixmwn02f: #d8eafc;
  --_1ixmwn02g: #e4f1fd;
  --_1ixmwn02h: #1d559d;
  --_1ixmwn02i: #e3f2fb;
  --_1ixmwn02j: #2e3849;
  --_1ixmwn02k: #242c39;
  --_1ixmwn02l: #384459;
  --_1ixmwn02m: #f3f5f7;
  --_1ixmwn02n: #f3f5f7;
  --_1ixmwn02o: #e4e8ed;
  --_1ixmwn02p: #ebeff2;
  --_1ixmwn02q: #12784f;
  --_1ixmwn02r: #e2f7f1;
  --_1ixmwn02s: #7f35a9;
  --_1ixmwn02t: #f9ebfd;
  --_1ixmwn02u: #fff;
  --_1ixmwn02v: #1c2330;
  --_1ixmwn02w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1ixmwn02x: 783;
  --_1ixmwn02y: 1057;
  --_1ixmwn02z: -274;
  --_1ixmwn030: 0;
  --_1ixmwn031: 1000;
  --_1ixmwn03w: 18px;
  --_1ixmwn03x: 27.094px;
  --_1ixmwn03y: 14.094px;
  --_1ixmwn03z: -0.3611em;
  --_1ixmwn040: -0.3611em;
  --_1ixmwn041: 18px;
  --_1ixmwn042: 27.094px;
  --_1ixmwn043: 14.094px;
  --_1ixmwn044: -0.3611em;
  --_1ixmwn045: -0.3611em;
  --_1ixmwn03m: 16px;
  --_1ixmwn03n: 24.528px;
  --_1ixmwn03o: 12.528px;
  --_1ixmwn03p: -0.375em;
  --_1ixmwn03q: -0.375em;
  --_1ixmwn03r: 16px;
  --_1ixmwn03s: 24.528px;
  --_1ixmwn03t: 12.528px;
  --_1ixmwn03u: -0.375em;
  --_1ixmwn03v: -0.375em;
  --_1ixmwn03c: 14px;
  --_1ixmwn03d: 20.962px;
  --_1ixmwn03e: 10.962px;
  --_1ixmwn03f: -0.3571em;
  --_1ixmwn03g: -0.3571em;
  --_1ixmwn03h: 14px;
  --_1ixmwn03i: 20.962px;
  --_1ixmwn03j: 10.962px;
  --_1ixmwn03k: -0.3571em;
  --_1ixmwn03l: -0.3571em;
  --_1ixmwn032: 12px;
  --_1ixmwn033: 18.396px;
  --_1ixmwn034: 9.396px;
  --_1ixmwn035: -0.375em;
  --_1ixmwn036: -0.375em;
  --_1ixmwn037: 12px;
  --_1ixmwn038: 18.396px;
  --_1ixmwn039: 9.396px;
  --_1ixmwn03a: -0.375em;
  --_1ixmwn03b: -0.375em;
  --_1ixmwn046: 400;
  --_1ixmwn047: 600;
  --_1ixmwn048: 700;
  --_1ixmwn049: 28px;
  --_1ixmwn04a: 32.924px;
  --_1ixmwn04b: 21.924px;
  --_1ixmwn04c: -0.1964em;
  --_1ixmwn04d: -0.1964em;
  --_1ixmwn04e: 36px;
  --_1ixmwn04f: 42.188px;
  --_1ixmwn04g: 28.188px;
  --_1ixmwn04h: -0.1944em;
  --_1ixmwn04i: -0.1944em;
  --_1ixmwn04j: 24px;
  --_1ixmwn04k: 29.792px;
  --_1ixmwn04l: 18.792px;
  --_1ixmwn04m: -0.2292em;
  --_1ixmwn04n: -0.2292em;
  --_1ixmwn04o: 30px;
  --_1ixmwn04p: 36.49px;
  --_1ixmwn04q: 23.49px;
  --_1ixmwn04r: -0.2167em;
  --_1ixmwn04s: -0.2167em;
  --_1ixmwn04t: 22px;
  --_1ixmwn04u: 27.226px;
  --_1ixmwn04v: 17.226px;
  --_1ixmwn04w: -0.2273em;
  --_1ixmwn04x: -0.2273em;
  --_1ixmwn04y: 24px;
  --_1ixmwn04z: 29.792px;
  --_1ixmwn050: 18.792px;
  --_1ixmwn051: -0.2292em;
  --_1ixmwn052: -0.2292em;
  --_1ixmwn053: 20px;
  --_1ixmwn054: 24.66px;
  --_1ixmwn055: 15.66px;
  --_1ixmwn056: -0.225em;
  --_1ixmwn057: -0.225em;
  --_1ixmwn058: 20px;
  --_1ixmwn059: 24.66px;
  --_1ixmwn05a: 15.66px;
  --_1ixmwn05b: -0.225em;
  --_1ixmwn05c: -0.225em;
  --_1ixmwn05d: 400;
  --_1ixmwn05e: 600;
  --_1ixmwn05f: underline;
  --_1ixmwn05g: 24px;
  --_1ixmwn05h: 20px;
  --_1ixmwn05i: transform 0.125s ease, opacity 0.125s ease;
  --_1ixmwn05j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1ixmwn05k: scale(0.95);
  --_1ixmwn05l:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_1ixmwn05m:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_1ixmwn05n:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
._1obeqj44 {
  font-size: var(--_1obeqj40);
  line-height: var(--_1obeqj41);
}
._1obeqj44:before {
  content: "";
  display: table;
  margin-bottom: var(--_1obeqj42);
}
._1obeqj44:after {
  content: "";
  display: table;
  margin-top: var(--_1obeqj43);
}
.q2yosj0 {
  font-family: var(--_1ixmwn02w);
}
.q2yosj1 {
  font-weight: var(--_1ixmwn046);
}
.q2yosj2 {
  font-weight: var(--_1ixmwn047);
}
.q2yosj3 {
  font-weight: var(--_1ixmwn048);
}
.q2yosj4 {
  --_1obeqj40: var(--_1ixmwn032);
  --_1obeqj41: var(--_1ixmwn033);
  --_1obeqj42: var(--_1ixmwn035);
  --_1obeqj43: var(--_1ixmwn036);
}
.q2yosj6 {
  --_1obeqj40: var(--_1ixmwn03c);
  --_1obeqj41: var(--_1ixmwn03d);
  --_1obeqj42: var(--_1ixmwn03f);
  --_1obeqj43: var(--_1ixmwn03g);
}
.q2yosj8 {
  --_1obeqj40: var(--_1ixmwn03m);
  --_1obeqj41: var(--_1ixmwn03n);
  --_1obeqj42: var(--_1ixmwn03p);
  --_1obeqj43: var(--_1ixmwn03q);
}
.q2yosja {
  --_1obeqj40: var(--_1ixmwn03w);
  --_1obeqj41: var(--_1ixmwn03x);
  --_1obeqj42: var(--_1ixmwn03z);
  --_1obeqj43: var(--_1ixmwn040);
}
.q2yosjc {
  font-size: var(--_1ixmwn032);
  line-height: var(--_1ixmwn033);
}
.q2yosjd {
  font-size: var(--_1ixmwn03c);
  line-height: var(--_1ixmwn03d);
}
.q2yosje {
  font-size: var(--_1ixmwn03m);
  line-height: var(--_1ixmwn03n);
}
.q2yosjf {
  font-size: var(--_1ixmwn03w);
  line-height: var(--_1ixmwn03x);
}
.q2yosjg {
  font-weight: var(--_1ixmwn05d);
}
.q2yosjh {
  font-weight: var(--_1ixmwn05e);
}
.q2yosji {
  --_1obeqj40: var(--_1ixmwn049);
  --_1obeqj41: var(--_1ixmwn04a);
  --_1obeqj42: var(--_1ixmwn04c);
  --_1obeqj43: var(--_1ixmwn04d);
}
.q2yosjk {
  --_1obeqj40: var(--_1ixmwn04j);
  --_1obeqj41: var(--_1ixmwn04k);
  --_1obeqj42: var(--_1ixmwn04m);
  --_1obeqj43: var(--_1ixmwn04n);
}
.q2yosjm {
  --_1obeqj40: var(--_1ixmwn04t);
  --_1obeqj41: var(--_1ixmwn04u);
  --_1obeqj42: var(--_1ixmwn04w);
  --_1obeqj43: var(--_1ixmwn04x);
}
.q2yosjo {
  --_1obeqj40: var(--_1ixmwn053);
  --_1obeqj41: var(--_1ixmwn054);
  --_1obeqj42: var(--_1ixmwn056);
  --_1obeqj43: var(--_1ixmwn057);
}
html:not(._117z7xi11) .q2yosj10 {
  --q2yosjq: var(--_1ixmwn019);
  --q2yosjr: var(--_1ixmwn017);
  --q2yosjs: var(--_1ixmwn01d);
  --q2yosjt: var(--_1ixmwn01o);
  --q2yosju: var(--_1ixmwn01m);
  --q2yosjv: var(--_1ixmwn015);
  --q2yosjw: var(--_1ixmwn01b);
  --q2yosjx: var(--_1ixmwn01k);
  --q2yosjy: var(--_1ixmwn01r);
  --q2yosjz: var(--_1ixmwn01f);
}
html:not(._117z7xi11) .q2yosj11 {
  --q2yosjq: var(--_1ixmwn01a);
  --q2yosjr: var(--_1ixmwn018);
  --q2yosjs: var(--_1ixmwn01e);
  --q2yosjt: var(--_1ixmwn01p);
  --q2yosju: var(--_1ixmwn01n);
  --q2yosjv: var(--_1ixmwn016);
  --q2yosjw: var(--_1ixmwn01c);
  --q2yosjx: var(--_1ixmwn01l);
  --q2yosjy: var(--_1ixmwn01s);
  --q2yosjz: var(--_1ixmwn01h);
}
html._117z7xi11 .q2yosj12 {
  --q2yosjq: var(--_1ixmwn019);
  --q2yosjr: var(--_1ixmwn017);
  --q2yosjs: var(--_1ixmwn01d);
  --q2yosjt: var(--_1ixmwn01o);
  --q2yosju: var(--_1ixmwn01m);
  --q2yosjv: var(--_1ixmwn015);
  --q2yosjw: var(--_1ixmwn01b);
  --q2yosjx: var(--_1ixmwn01k);
  --q2yosjy: var(--_1ixmwn01r);
  --q2yosjz: var(--_1ixmwn01f);
}
html._117z7xi11 .q2yosj13 {
  --q2yosjq: var(--_1ixmwn01a);
  --q2yosjr: var(--_1ixmwn018);
  --q2yosjs: var(--_1ixmwn01e);
  --q2yosjt: var(--_1ixmwn01p);
  --q2yosju: var(--_1ixmwn01n);
  --q2yosjv: var(--_1ixmwn016);
  --q2yosjw: var(--_1ixmwn01c);
  --q2yosjx: var(--_1ixmwn01l);
  --q2yosjy: var(--_1ixmwn01s);
  --q2yosjz: var(--_1ixmwn01h);
}
html:not(._117z7xi11) .q2yosj14,
html:not(._117z7xi11) .q2yosj15,
html:not(._117z7xi11) .q2yosj16,
html:not(._117z7xi11) .q2yosj17 {
  --q2yosjx: var(--q2yosjq);
}
html:not(._117z7xi11) .q2yosj18,
html:not(._117z7xi11) .q2yosj19 {
  --q2yosjx: var(--q2yosjr);
}
html:not(._117z7xi11) .q2yosj1a {
  --q2yosjx: var(--q2yosju);
}
html:not(._117z7xi11) .q2yosj1b {
  --q2yosjx: var(--q2yosjs);
}
html:not(._117z7xi11) .q2yosj1c {
  --q2yosjx: var(--q2yosjt);
}
html._117z7xi11 .q2yosj1d,
html._117z7xi11 .q2yosj1e,
html._117z7xi11 .q2yosj1f,
html._117z7xi11 .q2yosj1g {
  --q2yosjx: var(--q2yosjq);
}
html._117z7xi11 .q2yosj1h,
html._117z7xi11 .q2yosj1i {
  --q2yosjx: var(--q2yosjr);
}
html._117z7xi11 .q2yosj1j {
  --q2yosjx: var(--q2yosju);
}
html._117z7xi11 .q2yosj1k {
  --q2yosjx: var(--q2yosjs);
}
html._117z7xi11 .q2yosj1l {
  --q2yosjx: var(--q2yosjt);
}
.q2yosj1m {
  color: var(--q2yosjq);
}
.q2yosj1n {
  color: var(--q2yosjr);
}
.q2yosj1o {
  color: var(--q2yosjs);
}
.q2yosj1p {
  color: var(--q2yosjt);
}
.q2yosj1q {
  color: var(--q2yosju);
}
.q2yosj1r {
  color: var(--q2yosjv);
}
.q2yosj1s {
  color: var(--q2yosjw);
}
.q2yosj1t {
  color: var(--q2yosjx);
}
.q2yosj1u {
  color: var(--q2yosjy);
}
.q2yosj1v {
  color: var(--q2yosjz);
}
.q2yosj1w {
  padding-bottom: calc((var(--_1ixmwn09) - var(--_1ixmwn033)) / 2);
  padding-top: calc((var(--_1ixmwn09) - var(--_1ixmwn033)) / 2);
}
.q2yosj1x {
  padding-bottom: calc((var(--_1ixmwn09) - var(--_1ixmwn03d)) / 2);
  padding-top: calc((var(--_1ixmwn09) - var(--_1ixmwn03d)) / 2);
}
.q2yosj1y {
  padding-bottom: calc((var(--_1ixmwn09) - var(--_1ixmwn03n)) / 2);
  padding-top: calc((var(--_1ixmwn09) - var(--_1ixmwn03n)) / 2);
}
.q2yosj1z {
  padding-bottom: calc((var(--_1ixmwn09) - var(--_1ixmwn03x)) / 2);
  padding-top: calc((var(--_1ixmwn09) - var(--_1ixmwn03x)) / 2);
}
@media screen and (min-width: 740px) {
  .q2yosj4 {
    --_1obeqj40: var(--_1ixmwn037);
    --_1obeqj41: var(--_1ixmwn038);
    --_1obeqj42: var(--_1ixmwn03a);
    --_1obeqj43: var(--_1ixmwn03b);
  }
  .q2yosj6 {
    --_1obeqj40: var(--_1ixmwn03h);
    --_1obeqj41: var(--_1ixmwn03i);
    --_1obeqj42: var(--_1ixmwn03k);
    --_1obeqj43: var(--_1ixmwn03l);
  }
  .q2yosj8 {
    --_1obeqj40: var(--_1ixmwn03r);
    --_1obeqj41: var(--_1ixmwn03s);
    --_1obeqj42: var(--_1ixmwn03u);
    --_1obeqj43: var(--_1ixmwn03v);
  }
  .q2yosja {
    --_1obeqj40: var(--_1ixmwn041);
    --_1obeqj41: var(--_1ixmwn042);
    --_1obeqj42: var(--_1ixmwn044);
    --_1obeqj43: var(--_1ixmwn045);
  }
  .q2yosjc {
    font-size: var(--_1ixmwn037);
    line-height: var(--_1ixmwn038);
  }
  .q2yosjd {
    font-size: var(--_1ixmwn03h);
    line-height: var(--_1ixmwn03i);
  }
  .q2yosje {
    font-size: var(--_1ixmwn03r);
    line-height: var(--_1ixmwn03s);
  }
  .q2yosjf {
    font-size: var(--_1ixmwn041);
    line-height: var(--_1ixmwn042);
  }
  .q2yosji {
    --_1obeqj40: var(--_1ixmwn04e);
    --_1obeqj41: var(--_1ixmwn04f);
    --_1obeqj42: var(--_1ixmwn04h);
    --_1obeqj43: var(--_1ixmwn04i);
  }
  .q2yosjk {
    --_1obeqj40: var(--_1ixmwn04o);
    --_1obeqj41: var(--_1ixmwn04p);
    --_1obeqj42: var(--_1ixmwn04r);
    --_1obeqj43: var(--_1ixmwn04s);
  }
  .q2yosjm {
    --_1obeqj40: var(--_1ixmwn04y);
    --_1obeqj41: var(--_1ixmwn04z);
    --_1obeqj42: var(--_1ixmwn051);
    --_1obeqj43: var(--_1ixmwn052);
  }
  .q2yosjo {
    --_1obeqj40: var(--_1ixmwn058);
    --_1obeqj41: var(--_1ixmwn059);
    --_1obeqj42: var(--_1ixmwn05b);
    --_1obeqj43: var(--_1ixmwn05c);
  }
  .q2yosj1w {
    padding-bottom: calc((var(--_1ixmwn09) - var(--_1ixmwn038)) / 2);
    padding-top: calc((var(--_1ixmwn09) - var(--_1ixmwn038)) / 2);
  }
  .q2yosj1x {
    padding-bottom: calc((var(--_1ixmwn09) - var(--_1ixmwn03i)) / 2);
    padding-top: calc((var(--_1ixmwn09) - var(--_1ixmwn03i)) / 2);
  }
  .q2yosj1y {
    padding-bottom: calc((var(--_1ixmwn09) - var(--_1ixmwn03s)) / 2);
    padding-top: calc((var(--_1ixmwn09) - var(--_1ixmwn03s)) / 2);
  }
  .q2yosj1z {
    padding-bottom: calc((var(--_1ixmwn09) - var(--_1ixmwn042)) / 2);
    padding-top: calc((var(--_1ixmwn09) - var(--_1ixmwn042)) / 2);
  }
}
.go7lyo6 {
  background: var(--go7lyo0);
}
.go7lyo7 {
  background: var(--go7lyo1);
}
.go7lyo8 {
  background: var(--go7lyo2);
}
.go7lyo9 {
  background: var(--go7lyo3);
}
.go7lyoa {
  background: var(--go7lyo4);
}
.go7lyob {
  background: var(--go7lyo5);
}
html:not(._117z7xi11) .go7lyoc {
  --go7lyo0: var(--_1ixmwn0w);
  --go7lyo1: var(--_1ixmwn0p);
  --go7lyo2: var(--_1ixmwn0u);
  --go7lyo3: var(--_1ixmwn0h);
  --go7lyo4: var(--_1ixmwn0j);
  --go7lyo5: var(--_1ixmwn0n);
}
html:not(._117z7xi11) .go7lyod {
  --go7lyo0: var(--_1ixmwn0x);
  --go7lyo1: var(--_1ixmwn0q);
  --go7lyo2: var(--_1ixmwn0v);
  --go7lyo3: var(--_1ixmwn0i);
  --go7lyo4: var(--_1ixmwn0k);
  --go7lyo5: var(--_1ixmwn0o);
}
html._117z7xi11 .go7lyoe {
  --go7lyo0: var(--_1ixmwn0w);
  --go7lyo1: var(--_1ixmwn0p);
  --go7lyo2: var(--_1ixmwn0u);
  --go7lyo3: var(--_1ixmwn0h);
  --go7lyo4: var(--_1ixmwn0j);
  --go7lyo5: var(--_1ixmwn0n);
}
html._117z7xi11 .go7lyof {
  --go7lyo0: var(--_1ixmwn0x);
  --go7lyo1: var(--_1ixmwn0q);
  --go7lyo2: var(--_1ixmwn0v);
  --go7lyo3: var(--_1ixmwn0i);
  --go7lyo4: var(--_1ixmwn0k);
  --go7lyo5: var(--_1ixmwn0o);
}
.go7lyog {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.go7lyoh {
  width: var(--_1ixmwn0e);
}
.go7lyoi {
  width: var(--_1ixmwn0a);
}
._1nqb1xo0 {
  margin-bottom: -0.1em;
}
._1nqb1xo2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1nqb1xo0 ._1nqb1xo2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1nqb1xo4 {
    display: -webkit-box;
    -webkit-line-clamp: var(--_1nqb1xo3);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__117z7xi11,html.sprinkles_darkMode__117z7xi11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__i19zss0 typography_lightModeTone_light__q2yosj10 typography_darkModeTone_dark__q2yosj13">
+        <div class="reset_base__1py01160 sprinkles_paddingBottom_gutter_mobile__117z7xi8s sprinkles_paddingTop_gutter_mobile__117z7xi7o sprinkles_paddingLeft_gutter_mobile__117z7xib0 sprinkles_paddingRight_gutter_mobile__117z7xi9w sprinkles_position_relative_mobile__117z7xi5g sprinkles_borderRadius_large_mobile__117z7xi6c sprinkles_textAlign_left_mobile__117z7xiic sprinkles_boxShadow_borderNeutralLight_lightMode__117z7xi4k sprinkles_boxShadow_borderNeutral_darkMode__117z7xi4d typography_lightModeTone_light__q2yosj10 typography_darkModeTone_dark__q2yosj13 sprinkles_background_surface_lightMode__117z7xi34 sprinkles_background_surfaceDark_darkMode__117z7xi37">
+          <span class="reset_base__1py01160 sprinkles_display_block_mobile__117z7xi50 typography_fontFamily__q2yosj0 typography_fontWeight_regular__q2yosj1 typography_tone_neutral__q2yosj1t typography_textSize_large__q2yosja capsize_capsizeStyle__1obeqj44">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
